@@ -24,13 +24,13 @@ isostasy = 0
 sliding_law = 1
 basal_water = 2
 marine_margin = 0
-slip_coeff = 1
+slip_coeff = 0
 stress_calc = 0
 evolution = 2
 vertical_integration = 0
 
 [time]
-dt = 20.
+dt = 1.
 ntem = 1.
 nvel = 1.
 niso = 1.
